// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BottomSheetHeader Snapshots matches snapshot with all props 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "paddingBottom": 4,
        "paddingTop": 8,
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 9999,
            "height": 4,
            "width": 40,
          },
          {
            "backgroundColor": "#E0E0E0",
          },
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderBottomWidth": 0.5,
          "flexDirection": "row",
          "height": 56,
          "paddingHorizontal": 16,
        },
        {
          "borderBottomColor": "#E0E0E0",
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "minWidth": 44,
        }
      }
    >
      <Text>
        Left
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 8,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontSize": 18,
              "fontWeight": "600",
              "textAlign": "center",
            },
            {
              "color": "#1A1A1A",
            },
          ]
        }
      >
        Full Header
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "justifyContent": "flex-end",
          "minWidth": 44,
        }
      }
    >
      <Text>
        Right
      </Text>
      <View
        accessibilityLabel="Close"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          {
            "bottom": 8,
            "left": 8,
            "right": 8,
            "top": 8,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "opacity": 1,
            "width": 44,
          }
        }
      >
        <View
          style={
            {
              "height": 24,
              "width": 24,
            }
          }
          testID="icon-close"
        >
          <Text>
            close
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`BottomSheetHeader Snapshots matches snapshot with default props 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "paddingBottom": 4,
        "paddingTop": 8,
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 9999,
            "height": 4,
            "width": 40,
          },
          {
            "backgroundColor": "#E0E0E0",
          },
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderBottomWidth": 0.5,
          "flexDirection": "row",
          "height": 56,
          "paddingHorizontal": 16,
        },
        {
          "borderBottomColor": "#E0E0E0",
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "minWidth": 44,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 8,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "justifyContent": "flex-end",
          "minWidth": 44,
        }
      }
    >
      <View
        accessibilityLabel="Close"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          {
            "bottom": 8,
            "left": 8,
            "right": 8,
            "top": 8,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "opacity": 1,
            "width": 44,
          }
        }
      >
        <View
          style={
            {
              "height": 24,
              "width": 24,
            }
          }
          testID="icon-close"
        >
          <Text>
            close
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`BottomSheetHeader Snapshots matches snapshot with title 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "paddingBottom": 4,
        "paddingTop": 8,
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 9999,
            "height": 4,
            "width": 40,
          },
          {
            "backgroundColor": "#E0E0E0",
          },
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderBottomWidth": 0.5,
          "flexDirection": "row",
          "height": 56,
          "paddingHorizontal": 16,
        },
        {
          "borderBottomColor": "#E0E0E0",
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "minWidth": 44,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 8,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontSize": 18,
              "fontWeight": "600",
              "textAlign": "center",
            },
            {
              "color": "#1A1A1A",
            },
          ]
        }
      >
        Test Title
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "justifyContent": "flex-end",
          "minWidth": 44,
        }
      }
    >
      <View
        accessibilityLabel="Close"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          {
            "bottom": 8,
            "left": 8,
            "right": 8,
            "top": 8,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "opacity": 1,
            "width": 44,
          }
        }
      >
        <View
          style={
            {
              "height": 24,
              "width": 24,
            }
          }
          testID="icon-close"
        >
          <Text>
            close
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`BottomSheetHeader Snapshots matches snapshot without close button 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "paddingBottom": 4,
        "paddingTop": 8,
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 9999,
            "height": 4,
            "width": 40,
          },
          {
            "backgroundColor": "#E0E0E0",
          },
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderBottomWidth": 0.5,
          "flexDirection": "row",
          "height": 56,
          "paddingHorizontal": 16,
        },
        {
          "borderBottomColor": "#E0E0E0",
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "minWidth": 44,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 8,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontSize": 18,
              "fontWeight": "600",
              "textAlign": "center",
            },
            {
              "color": "#1A1A1A",
            },
          ]
        }
      >
        No Close Button
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "justifyContent": "flex-end",
          "minWidth": 44,
        }
      }
    />
  </View>
</View>
`;

exports[`BottomSheetHeader Snapshots matches snapshot without handle 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderBottomWidth": 0.5,
          "flexDirection": "row",
          "height": 56,
          "paddingHorizontal": 16,
        },
        {
          "borderBottomColor": "#E0E0E0",
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "minWidth": 44,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 8,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontSize": 18,
              "fontWeight": "600",
              "textAlign": "center",
            },
            {
              "color": "#1A1A1A",
            },
          ]
        }
      >
        No Handle
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "justifyContent": "flex-end",
          "minWidth": 44,
        }
      }
    >
      <View
        accessibilityLabel="Close"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          {
            "bottom": 8,
            "left": 8,
            "right": 8,
            "top": 8,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "opacity": 1,
            "width": 44,
          }
        }
      >
        <View
          style={
            {
              "height": 24,
              "width": 24,
            }
          }
          testID="icon-close"
        >
          <Text>
            close
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
